<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/layout_main_header"/>
    <TextView
        android:id="@+id/tv_email_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        android:layout_marginTop="@dimen/space_10"
        android:padding="@dimen/space_10"
        style="@style/text_middle"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="邮箱号"/>

    <com.iyangcong.reader.ui.LimitedEdittext
        android:id="@+id/et_account_name"
        style="@style/text_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_header"
        android:layout_marginTop="@dimen/space_10"
        android:layout_toRightOf="@id/tv_email_account"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/input_email"
        android:padding="@dimen/space_10"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:id="@+id/v_divider"
        android:background="@drawable/line_divide"
        android:layout_below="@id/tv_email_account"/>

    <TextView
        android:id="@+id/tv_randomcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_code"
        android:textColor="@color/black"
        style="@style/text_middle"
        android:background="@color/white"
        android:layout_below="@+id/v_divider"
        android:padding="@dimen/space_10"/>
    <ImageView
        android:id="@+id/random_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_divider"
        android:paddingRight="-30dip"
        android:layout_alignParentRight="true"
        android:textColor="@color/main_color"
        style="@style/text_middle"
        />
    <EditText
        android:id="@+id/et_input_randomcode"
        android:layout_below="@id/v_divider"
        android:layout_toRightOf="@id/tv_randomcode"
        android:layout_toLeftOf="@id/random_image"
        android:background="@color/white"
        android:lines="1"
        style="@style/text_middle"
        android:padding="@dimen/space_10"
        android:hint="@string/please_input_random_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:id="@+id/v_divider2"
        android:background="@drawable/line_divide"
        android:layout_below="@id/tv_randomcode"/>
    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@color/black"
        style="@style/text_middle"
        android:background="@color/white"
        android:layout_below="@+id/v_divider2"
        android:padding="@dimen/space_10"/>
    <TextView
        android:id="@+id/tv_send_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_divider2"
        android:padding="@dimen/space_10"
        android:background="@color/white"
        android:layout_alignParentRight="true"
        android:textColor="@color/main_color"
        style="@style/text_middle"
        android:text="@string/send_code"/>
    <EditText
        android:id="@+id/et_input_code"
        android:layout_below="@id/v_divider2"
        android:layout_toRightOf="@id/tv_code"
        android:layout_toLeftOf="@id/tv_send_code"
        android:background="@color/white"
        android:lines="1"
        style="@style/text_middle"
        android:padding="@dimen/space_10"
        android:hint="@string/please_input_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.iyangcong.reader.ui.button.FlatButton
        android:id="@+id/fb_change_email_account"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/space_40"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_18"
        android:layout_below="@+id/et_input_code"
        android:layout_centerHorizontal="true"
        android:text="更换邮箱账号"
        android:textColor="@color/white"
        app:cub_riple_effect="false"
        app:shadowEnabled="false"
        app:shadowHeight="@dimen/space_0" />
</RelativeLayout>