<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <include layout="@layout/layout_main_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginRight="@dimen/space_8"
            android:layout_marginTop="@dimen/space_15"
            android:layout_marginLeft="@dimen/space_8"
            android:id="@+id/item_pic"
            android:background="@drawable/bg_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_80"
            android:gravity="center_vertical"
            style="@style/settings_item_layout_single"
            android:padding="10dip">
            <ImageView
                android:id="@+id/pic"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_toLeftOf="@id/arrow"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_head_default"
                 />
            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dip"
                android:gravity="center_vertical"
                android:src="@drawable/ic_arrow_gray"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/text_middle_large"
                android:text="@string/setting_head"
                 />
        </RelativeLayout>
        <View
            android:id="@+id/item_bottom_divider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginRight="@dimen/space_8"
            android:background="@drawable/line_divide" />
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_nickName"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="true"
            app:item_hintText="设置昵称"
            android:layout_marginRight="@dimen/space_8"
            app:item_titleText="@string/setting_nickName"
            android:visibility="gone"/>
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_accounts"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="true"
            app:item_hintText="xxxxxxx@xxx.com"
            app:item_oneVisibility="true"
            android:layout_marginRight="@dimen/space_8"
            app:item_titleText="@string/setting_accounts" />
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_schoolaccount"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="true"
            app:item_hintText="未激活"
            app:item_oneVisibility="true"
            android:layout_marginRight="@dimen/space_8"
            app:item_titleText="学生账号"
            />
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_phone"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="false"
            app:item_oneVisibility="true"
            android:layout_marginRight="@dimen/space_8"
            app:item_hintText="请绑定手机"
            app:item_titleText="@string/setting_phone" />

        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_name"
            android:layout_marginTop="@dimen/space_15"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="true"
            android:layout_marginRight="@dimen/space_8"
            app:item_hintText="设置昵称"
            app:item_titleText="@string/setting_nickName" />
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_sex"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="true"
            android:layout_marginRight="@dimen/space_8"
            app:item_hintText="设置性别"
            app:item_titleText="@string/setting_sex" />
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_region"
            android:layout_marginLeft="@dimen/space_8"
            android:visibility="gone"
            style="@style/settings_item_layout_single"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            android:layout_marginRight="@dimen/space_8"
            app:item_showDivider="true"
            app:item_hintText="设置地区"
            app:item_titleText="@string/setting_region" />
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_introduction"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            android:layout_marginRight="@dimen/space_8"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="true"
            app:item_hintText="设置简介"
            app:item_titleText="@string/setting_introduction" />
        <com.iyangcong.reader.ui.SettingItem
            android:id="@+id/si_mine_modify_passward"
            android:layout_marginTop="@dimen/space_15"
            android:layout_marginLeft="@dimen/space_8"
            style="@style/settings_item_layout_single"
            android:layout_marginRight="@dimen/space_8"
            app:item_accessoryType="arrow"
            app:item_imgVisibility="true"
            app:item_showDivider="false"
            app:item_titleText="@string/setting_modify_passward" />
    </LinearLayout>
</LinearLayout>